<resources>
    <string name="app_name">高地</string>
    <string name="mainActivity_title">主页</string>
    <string name="newsTitle">新闻列表</string>
    <string name="LocalData">本地资料</string>
    <string name="Junshi">军事</string>
    <string name="Guoji">国际</string>
    <string name="Local">资料</string>

    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="sex">性别:</string>
    <string name="man">男</string>
    <string name="female">女</string>
    <string name="password">密码(6-16位)</string>
    <string name="password_next">确认密码(6-16位)</string>
    <string name="password_new">新密码(6-16位)</string>
    <string name="agree">确认</string>
    <string name="submit">提交</string>
    <string name="error">失败</string>
    <string name="success">成功</string>
    <string name="errorLogin">登录失败</string>
    <string name="changePass">修改密码</string>
    <string name="pleaseLogin">请登录</string>
    <string name="login">登录</string>
    <string name="loginNot">不登录</string>
    <string name="string_1">请输入用户名/密码/确认密码</string>
    <string name="string_2">前后密码不一致</string>
    <string name="string_3">密码长度为6-12位</string>
    <string name="string_4">在此输入您的评论</string>
    <string name="string_5">请选择男/女</string>
    <string name="string_6">请输入原密码</string>
    <string name="string_7">修改密码需要先登录</string>
    <string name="string_8">评论需要登录</string>
    <string name="string_9">原密码不正确，\n请检查后重新输入！</string>
    <string name="string_10">帐号或者密码不正确，\n请检查后重新输入！</string>
    <string name="string_11">请检查输入是否完整！</string>
    <string name="string_12">新密码与原密码相同!</string>

    <!--local的introduce内容-->
    <string name="itemLandIntroduce">中国人民解放军陆军是人民解放军的战略军种，是空中作战行动的主体力量，担负着保卫国家领空安全和领土主权、保持全国空防稳定等任务。空军主要由航空兵、地面防空兵、空降兵、通信兵、雷达兵、电子对抗兵、技术侦察兵、防化兵等兵种组成。</string>
    <string name="itemNavyIntroduce">中国人民解放军海军是中华人民共和国的海上武装力量，中国人民解放军的海上分支。中国人民解放军海军是中国人民解放军中以舰艇部队和海军航空兵为主体，其主要任务是独立或协同陆军、空军防御敌人从海上的入侵，保卫领海主权，维护海洋权益。其作战部队——除了海军总部直辖外，分布于北海、东海、南海三支舰队中。海军是海上作战的主力，具有在水面、水中、空中作战的能力。</string>
    <string name="itemAirIntroduce">中国人民解放军空军（Air Force of the CPLA）于1949年11月11日正式成立，经过半个世纪的建设，人民空军已经发展成为一支由航空兵、地空导弹兵、高射炮兵、雷达兵、空降兵、电子对抗、气象等多兵种合成，由歼击机、强击机、轰炸机、运输机等多机种组成的现代化的高技术军种。主要任务是担负国土防空，支援陆、海军作战，对敌后方实施空袭，进行空运和航空侦察。</string>

    <string name="suggest">如果您对此APP有什么意见或建议，欢迎您给我提出您宝贵的意见。该APP是个人兴趣做的,难免有不合理或欠缺的地方，发邮件或发短信，欢迎您宝贵的意见</string>
</resources>
