<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/change_pass"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBarBg"
        app:title="@string/changePass">
    </android.support.v7.widget.Toolbar>
    <!--如果原密码输入正确，隐藏此部分，让下面部分显示-->
    <LinearLayout
        android:id="@+id/change_pass_first_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/size_ok"
        android:orientation="vertical"
        android:visibility="visible">
        <EditText
            android:id="@+id/changePass_textOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_6"
            android:textSize="@dimen/word_size_19"
            android:inputType="textPassword"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/agree"
            android:onClick="AgreeFirst"/>
    </LinearLayout>

    <!--原密码输入不正确，则隐藏下面的部分-->
    <LinearLayout
        android:id="@+id/change_pass_next_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/size_ok"
        android:orientation="vertical"
        android:visibility="gone">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/word_size_19"
            android:inputType="textPassword"
            android:hint="@string/password_new"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/word_size_19"
            android:inputType="textPassword"
            android:hint="@string/password_next"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:textSize="@dimen/word_size_19"
            android:layout_gravity="center"
            android:onClick="AgreeNext"/>
    </LinearLayout>

</LinearLayout>